[package]
name = "zfec-rs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Wrapper of zfec library"
homepage = "https://github.com/thornleywalker/zfec-rs"
repository = "https://github.com/thornleywalker/zfec-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[build-dependencies]
cc = "1.0.72"
bindgen = "0.53.1"
